--- a/web.html
+++ b/web.html
@@ -1,3 +1,19 @@
 <h1>Hello Everyone i am sohag</h1>
 <p>I am doing this to see if it works</p>
 <button>Click Me</button>
+<p><h1>Its a PRANK</h1></p>
+
+<h1>The select element</h1>
+
+<p>The select element is used to create a drop-down list.</p>
+
+<form action="/action_page.php">
+  <label for="cars">Choose a car:</label>
+  <select name="cars" id="cars">
+    <option value="volvo">Volvo</option>
+    <option value="saab">Saab</option>
+    <option value="opel">Opel</option>
+    <option value="audi">Audi</option>
+  </select>
+  <br><br>
+</form>
