--- a/web.html
+++ b/web.html
@@ -17,3 +17,10 @@
   </select>
   <br><br>
 </form>
+
+<dl>
+  <dt>Coffee</dt>
+  <dd>- black hot drink</dd>
+  <dt>Milk</dt>
+  <dd>- white cold drink</dd>
+</dl>
